Fix - Layout spacing on first section

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: space-between;
 
-    padding: 0px 400px;
+    padding: 0% 12%;
 
     height: 50px;
 }
@@ -34,7 +34,7 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 0px 400px;
+    padding: 0% 12%;
 }
 
 .home-description{
@@ -88,6 +88,8 @@
 
 .first-section{
     display: flex;
+
+    min-height: 200px;
 
     border: 1px solid red;
 }
